fix problem with alignment of elemnts

--- a/frontend/src/components/post-card/PostCard.module.scss
+++ b/frontend/src/components/post-card/PostCard.module.scss
@@ -4,16 +4,16 @@
 	&__box {
 		justify-content: space-between;
 		align-items: center;
-		margin: 1em;
-		width: 80%;
+		margin: 1em 0;
+		width: 100%;
 		cursor: pointer;
 
 		@media (min-width: 768px) {
-			width: 35%;
+			width: 45%;
 			height: 450px;
 		}
 		@media (min-width: 1200px) {
-			width: 25%;
+			width: 30%;
 		}
 
 		&:hover .card__text-title {
@@ -29,11 +29,11 @@
 		align-items: center;
 		width: 100%;
 		@media (min-width: 500px) {
-			height: 300px;
+			height: 270px;
 		}
 
 		@media (min-width: 768px) {
-			height: 150px;
+			height: 170px;
 		}
 
 		img {
